   algorithm, that can be used to reduce the number of curve points.
   It can be very useful to improve the performance of painting
   curves of many lines ( f.e. by implementing different level of details ).
11)Legend code update for representing different pixmaps for different
   types of plot items.
12)Copy operators removed, using pointers instead
13)QwtPolarPoint from qwtpolar added


Release 5.2.1
===================

Bug Fixes
---------
1) Export declarations removed from qwt_valuelist.h to avoid
   compiler errors with Qt 4.6 + certain compilers on Windows.
2) QwtScaleDraw
   Wrong border dist hints for unregular scale divisions fixed
   Layout calculation for the tick labels fixed. 
   The layout was wrong by 1 pixel for top/left/bottom axes. 
   On a left axis without a title the labels were sometimes cut off.
3) QwtPainter 
   Splits polylines for all pens to avoid a bottleneck of the 
   raster paint engine.
4) QwtScaleWidget
   Calculation of the colorbar position fixed ( spacing/margin )
5) QwtPlotCurve
   Wrong clipping rect fixed
6) QwtPicker
   QwtPicker::setTrackerFont() fixed.
   Recursion on the Mac, when constructing the rubberband fixed.
   Workaround for a Qt3 bug added that is responsible for left aligning
   all tracker texts to the canvas.

Changes
-------
1) Project files adopted for symbian
2) qwt.pro 
   CONFIG += ordered added for using make -j
   CONFIG += silent added

Release 5.2.0
===================

Changes
-------
1) Ported to Qt 4.5.x
2) Scaling of non cosmetic pens (for printing to devices in high resolution)
3) Clipping of polygons for SVG rendering
4) QwtRect removed
   use QwtClipper instead
5) QwtPlotRescaler 
   Introduced
6) QwtDoubleInterval
   BorderMode introduced
7) QwtPlotCurve
   Performance of incremental curve painting ( = draw(from, to) ) improved.
8) QwtLegendItem
   setIdentfierMode renamed to setIdentifierMode
9) QwtPlotCanvas::replot() introduced
   code from QwtPlot::replot shifted
10)QwtPlot 